# ATIS_CLEAN_OPERATIONAL

./: .gitignore  ATIS_V3_STABLE_CERTIFICATION.md  BUILD_INFO.txt  INSTALLATION.md  README.md  RELEASE_CHECKLIST_v3_0_RC1.md  RELEASE_MANIFEST.json  RELEASE_NOTES_v1_1.md  RELEASE_NOTES_v1_2_PHASE_2_UI_POLISH.md  RELEASE_NOTES_v1_3_1_LIVE_FREEZE_FIX.md  RELEASE_NOTES_v1_3_PHASE_3_LIVE_DATA.md  RELEASE_NOTES_v1_4_1_STARTUP_HOTFIX.md  RELEASE_NOTES_v1_4_PHASE_4_SCANNER_ENGINE.md  RELEASE_NOTES_v1_5_PHASE_5_CHART_ENGINE.md  RELEASE_NOTES_v1_6_PHASE_6_AI_DECISION_ENGINE.md  RELEASE_NOTES_v1_7_PHASE_7_PORTFOLIO_RISK.md  RELEASE_NOTES_v1_8_PHASE_8_TRADE_JOURNAL_ANALYTICS.md  RELEASE_NOTES_v1_9_PHASE_9_ALERTS_AUTOMATION.md  RELEASE_NOTES_v2_0_PHASE_10_MARKET_INTELLIGENCE.md  RELEASE_NOTES_v2_1_1_MULTICHART_STARTUP_HOTFIX.md  RELEASE_NOTES_v2_1_PHASE_11_MULTI_CHART_WORKSPACE.md  RELEASE_NOTES_v2_2_PHASE_12_WORKSPACE_MANAGER.md  RELEASE_NOTES_v2_3_PHASE_13_PAPER_TRADING.md  RELEASE_NOTES_v2_4_PHASE_14_STRATEGY_LAB.md  RELEASE_NOTES_v2_5_PHASE_15_COMMAND_CENTER.md  RELEASE_NOTES_v2_6_1_DIAGNOSTICS_STARTUP_HOTFIX.md  RELEASE_NOTES_v2_6_PHASE_16_PRODUCTION_HARDENING.md  RELEASE_NOTES_v2_7_1_INTEGRATIONS_BUTTON_FIX.md  RELEASE_NOTES_v2_7_PHASE_17_PLUGIN_API_FRAMEWORK.md  RELEASE_NOTES_v3_0_0_RC1_PHASE_18 copy.md  RELEASE_NOTES_v3_0_1_ALL_SYMBOL_SEARCH.md  RELEASE_NOTES_v3_0_2_UI_LAYOUT_STABILITY.md  RELEASE_NOTES_v3_0_3_LIVE_STOCK_EXPLORER.md  RELEASE_NOTES_v3_1_LIVE_MARKET_WORKSTATION.md  RELEASE_NOTES_v4_0_1_WATCHLIST_RANK_HOTFIX.md  RELEASE_NOTES_v4_0_WORKSTATION_ARCHITECTURE.md  (+4 more)
(+53 files in other folders)
