[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atis-clean-operational"
version = "0.1.0"
description = "ATIS Clean Operational"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "yfinance>=0.2.40",
  "pandas>=2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["atis_clean*"]
